--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                     <div class="search-bar">
                         <form action="/search" method="get">
                             <input type="search" placeholder="Search products..." name="q">
-                            <button type="submit"><i class="fas fa-search"></i></button>
+                            <button type="submit"><i class="fas fa-search d-block"></i></button>
                         </form>
                     </div>
                 </div>
@@ -58,6 +58,7 @@
                             <a href="#">Whey Protein</a>
                             <a href="#">Plant Protein</a>
                             <a href="#">Casein</a>
+                            <a asp-controller="Category" asp-action="Index">Categories</a>
                         </div>
                     </li>
                     <li class="dropdown">
