[added] product controller

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -58,7 +58,6 @@
                             <a href="#">Whey Protein</a>
                             <a href="#">Plant Protein</a>
                             <a href="#">Casein</a>
-                            <a asp-controller="Category" asp-action="Index">Categories</a>
                         </div>
                     </li>
                     <li class="dropdown">
@@ -75,6 +74,13 @@
                             <a href="#">Stimulant</a>
                             <a href="#">Non-Stimulant</a>
                             <a href="#">Energy Drinks</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">Controllers</a>
+                        <div class="dropdown-content">
+                            <a asp-controller="Category" asp-action="Index">Categories</a>
+                            <a asp-controller="Product" asp-action="Index">Products</a>
                         </div>
                     </li>
                 </ul>
