--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -75,14 +75,17 @@
                             <a href="#">Non-Stimulant</a>
                             <a href="#">Energy Drinks</a>
                         </div>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">Controllers</a>
-                        <div class="dropdown-content">
-                            <a asp-controller="Category" asp-action="Index">Categories</a>
-                            <a asp-controller="Product" asp-action="Index">Products</a>
-                        </div>
-                    </li>
+                    </li>                    @if (User.IsInRole("Admin"))
+                    {
+                        <li class="dropdown">
+                            <a href="#">Controllers</a>
+                            <div class="dropdown-content">
+                                <a asp-controller="Category" asp-action="Index">Categories</a>
+                                <a asp-controller="Product" asp-action="Index">Products</a>
+                                <a asp-controller="User" asp-action="Index">Users</a>
+                            </div>
+                        </li>
+                    }
                 </ul>
             </div>
         </nav>
